[project]
name = "tf-mamba"
version = "0.1.0"
description = ""
authors = [
    {name = "y00njaekim",email = "rladbswo12@gm.gist.ac.kr"}
]
requires-python = ">=3.10"
dependencies = [
    "torch (==2.1.2)",
    "torchvision (==0.16.2)",
    "torchaudio (==2.1.2)",
    "numpy (>=1.26.4,<2.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "einops (>=0.8.0,<1.0.0)",
    "safetensors (>=0.4.3,<1.0.0)",
    "soundfile (>=0.12.1,<1.0.0)",
    "tqdm (>=4.66.4,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
torchaudio = {source = "pytorch"}
